--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Jason Villanueva <a@jsonvillanueva.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.7"
 pyaudio = "0.2.11" # You'll have to download this from source on Python 3.7+
 pydub = "*"
 kivy = "^2"
@@ -14,6 +14,30 @@ numpy = "*"
 pygame = "*"
 
 [tool.poetry.dev-dependencies]
+pytest-cov = "*"
+pytest = "^6.0"
+pylint = "*"
+pre-commit = "^2.11.1"
+flake8 = "^3.9.0"
+isort = "^5.8.0"
+
+[tool.poetry.dev-dependencies.black]
+version = "^20.8b1"
+allow-prereleases = false
+python = "^3.7"
+
+[tool.pytest.ini_options]
+markers = "slow: Mark the test as slow. Can be skipped with --skip_slow"
+addopts = "--cov=manim --cov-report xml --cov-report term"
+
+[tool.isort]
+# from https://black.readthedocs.io/en/stable/compatible_configs.html
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+line_length = 88
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
