--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-pyaudio = "0.2.11" # You'll have to download this from source on Python 3.7+
-pydub = "*"
-kivy = "^2"
-numpy = "*"
-pygame = "*"
+click = "^8"
+pyglet = "^1.5"
+twisted = "^21.2"
+numpy = "^1.20"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "*"
@@ -38,6 +37,10 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 88
+
+[tool.poetry.plugins]
+[tool.poetry.plugins."console_scripts"]
+"pyhero" = "pyhero.__main__:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
